feat: Added activity laps endpoint
